Added filestorage service